z-index button fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -58,7 +58,7 @@ header {
     justify-content: space-between;
     padding: 0.75rem 1.5rem;
     background-color: var(--background-color-white);
-    z-index: 2;
+    z-index: 5;
 }
 
 main {
@@ -195,11 +195,6 @@ svg {
     max-width: 100rem;
     max-height: 40rem;
 }
-
-/* scrollbar verwijderen van carousel */
-/* .location-images::-webkit-scrollbar{
-    display: none;
-} */
 
 .location-image {
     object-fit: cover;
